# floria-strainer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish_pypi.yaml
floria_strainer/: __init__.py  cli.py  main.py  parser.py
tests/: test_df.py  test_parser.py
tests/data/: NZ_CP081897.1.vartigs  vartig_info.txt
tests/data/floria_out_dir/: contig_ploidy_info.tsv
tests/data/floria_out_dir/NZ_CP081897.1/: NZ_CP081897.1.haplosets  vartig_info_short.txt
