[tool.poetry]
name = "floria-strainer"
version = "0.2.0"
description = ""
authors = ["maxibor <maxime.borry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"
numpy = "^1.26.4"
pysam = "^0.22.0"
click = "^8.1.7"
rich-click = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[tool.poetry.scripts]
floria-strainer = "floria_strainer.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
